# household_accounts

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
docs/: usage.md
household_accounts/: __main__.py  calc.py  config.py  cut_out_images.py  cut_out_receipts.py  edit_csv.py  edit_image.py  get_file_path_list.py  gui.py  gui_each_receipt.py  gui_last_page.py  gui_make_pages.py  gui_show_receipt_contours.py  ocr.py  resize_image.py  write_csv.py
notebook/: レシート矩形の検知試行_各改善案まとめ.ipynb
