[tool.poetry]
name = "household_accounts"
version = "0.1.0"
description = ""
authors = ["yrarchi <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.23"
pyocr = "0.8"
opencv-python = "4.7.x"

[tool.poetry.dev-dependencies]
black = "^24.3.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
